--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 .flex-container{
+    background: lightblue;
+    padding: 16px;
+    border: 4px solid blue;
+    gap: 8px;
     display:flex; 
 }
 /* this selector selects all divs inside of .flex-container */
 
 .flex-container div {
     background: peachpuff;
-    border: 4px solid brown;
-    height: 100px;
+    border: 4px solid salmon;
+    height: 48px;
+    padding: 4px;
     flex: 1;
 }
