--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     border: 4px solid blue;
     gap: 8px;
     display:flex; 
+    flex-direction: column;
 }
 /* this selector selects all divs inside of .flex-container */
 
